# cpp-easy

./: LICENSE  README.md
operators/conditional/: Makefile  conditional.cpp
patterns/decorator/src/: CMakeLists.txt  aircraft.cpp  aircraft.h  iaircraft.h  main.cpp
patterns/decorator/src/decorators/: CMakeLists.txt  aircraft_decorator.cpp  aircraft_decorator.h  gps_decorator.cpp  gps_decorator.h  logging_decorator.cpp  logging_decorator.h  rand_walk_decorator.cpp  rand_walk_decorator.h  thrust_boost_decorator.cpp  thrust_boost_decorator.h
patterns/factory_method/: CMakeLists.txt
patterns/factory_method/src/: CMakeLists.txt  main.cpp
patterns/factory_method/src/sims/: CMakeLists.txt  aircraft_sim.cpp  aircraft_sim.h  iaircraft.h
patterns/factory_method/src/sims/aircraft/: CMakeLists.txt  air_3.cpp  air_3.h  airbus_a320.cpp  airbus_a320.h  boeing_777.cpp  boeing_777.h  cessna_skyhawk.cpp  cessna_skyhawk.h  gulfstream_g550.cpp  gulfstream_g550.h  mini_pro.cpp  mini_pro.h  parrot.cpp  parrot.h  raptor.cpp  raptor.h  shadow.cpp  shadow.h  spitefire_mk24.cpp  spitefire_mk24.h
patterns/factory_method/src/sims/aircraft_sim/: CMakeLists.txt  aircraft_sim.cpp  aircraft_sim.h  iaircraft.h
patterns/factory_method/src/sims/aircraft_sims/: CMakeLists.txt  aircraft_sim.h
patterns/factory_method/src/sims/civil_aircraft_sim/: CMakeLists.txt  civil_aircraft_sim.cpp  civil_aircraft_sim.h
patterns/factory_method/src/sims/drone_aircraft_sim/: CMakeLists.txt  drone_aircraft_sim.cpp  drone_aircraft_sim.h
patterns/null/: .gitignore  CMakeLists.txt  Makefile  README.txt
patterns/null/src/: CMakeLists.txt  flight.cpp  flight.h  main.cpp  nullable.cpp  nullable.h
patterns/observer/: CMakeLists.txt
patterns/observer/src/: CMakeLists.txt  light.cpp  light.h  main.cpp  oven.cpp  oven.h  switchable.h
patterns/strategy/: CMakeLists.txt
patterns/strategy/src/: CMakeLists.txt  aircraft.cpp  aircraft.h  main.cpp
patterns/template_method/: CMakeLists.txt
patterns/template_method/src/: CMakeLists.txt  atc.cpp  atc.h  main.cpp
sections/01-hello_world/: Makefile  README.txt  hello_world.cpp
sections/01-learning/: .gitignore  setup.sh
sections/01-learning/01-hello_world/: hello_world.cpp
sections/01-learning/02-minimum/: README.txt  main.cpp
sections/01-learning/03-cout/: cout.cpp
sections/01-learning/07-functions/: Makefile  functions.cpp
sections/01-learning/08-function-args/: 06-function-args.cpp  Makefile  function-args.cpp
sections/01-learning/10-function-args/: function-args.cpp
sections/01-learning/10-if-else/: if-else.cpp
sections/01-learning/10-if-op-conditional/: if-op-cond.cpp
sections/01-learning/10-loops-of-control/: loops.cpp
sections/01-learning/10-template/: Makefile
sections/01-learning/11-conversion/: Makefile  conversion.cpp
sections/01-learning/11-strings/: strings.cpp
sections/01-learning/12-class-static-member/: run.sh
sections/01-learning/17-struct/: Makefile  (+1 more)
sections/02-minimum/: run.sh
sections/02-variables/: Makefile  variables.cpp
sections/03-cout/: Makefile
sections/03-variables/: Makefile  variables.cpp
sections/03-vars-out/: Makefile  vars_cout.cpp
sections/04-cout/: cout.cpp
sections/04-vars-cout/: vars_cout.cpp
sections/05-input/: Makefile  input.cpp
sections/06-functions/: Makefile
sections/06-input-sleep/: Makefile  input_sleep.cpp
sections/08-class-static-member/: main.cpp  shape.h
sections/09-strings/: Makefile  strings.cpp
sections/10-if-else/: Makefile
sections/10-loops-of-control/: Makefile  loops.cpp
sections/10-switch/: Makefile  switch_ex.cpp
sections/10-template/: main.cpp  value.h
sections/11-conversion/: Makefile  main.cpp
sections/12-class-static-member/: CMakeLists.txt  shape.cpp
(+52 files in other folders)
