message("Adding executable...")
add_executable(factory_method main.cpp)
add_subdirectory(sims)
target_link_libraries(factory_method PRIVATE sims_lib)
target_include_directories(factory_method PRIVATE .)
target_include_directories(factory_method PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/sims/civil_aircraft_sim)
